--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "core-react-next",
+  "name": "demo-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "lint": "next lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,css,md}\"",
@@ -24,6 +24,7 @@
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
+    "ol": "^10.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
